--- a/index.html
+++ b/index.html
@@ -8,7 +8,67 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Weather Near U</h1>
 
+    </header>
+<div class="container" >
+    <div class="row">
+        <div class="col-lg-2" id="citySearch">
+                <input placeholder="City Name" class="searchName" type="text">
+                <button type="button" class="btn btn-primary">Search</button>
+            <ul class="cityList">
+
+            </ul>
+        </div>
+        <div class="col-lg-6 results">
+            <div class="row today" >
+                <ul>
+                 <h1 id="cityName" >Placeholder</h1>
+                 <p id="date">Tuesday 06/30/2020</p>
+                 <p>sunny <span id="symbol"></span></p>
+                 <p>Temperature: <span id="temp"></span></p>
+                 <p>Humidity: <span id="humidity"></span></p>
+                 <p>Wind Speed: <span id="wind"></span></p>
+                 <p>UV Index: <span id="UV"></span></p>
+                </ul>
+            </div>
+            <div class="row future">
+                <div class="col-lg-2 day">
+                    <p id="futureDate">Wednesday 07/31/2020</p>
+                    <p>sunny <span id="futureSymbol"></span></p>
+                    <p>Temperature: <span id="futureTemp"></span></p>
+                    <p>Humidity: <span id="futureHumidity"></span></p>
+                </div>
+                <div class="col-lg-2 day">
+                    <p id="futureDate">Wednesday 07/31/2020</p>
+                    <p>sunny <span id="futureSymbol"></span></p>
+                    <p>Temperature: <span id="futureTemp"></span></p>
+                    <p>Humidity: <span id="futureHumidity"></span></p>
+                </div>
+                <div class="col-lg-2 day">
+                    <p id="futureDate">Wednesday 07/31/2020</p>
+                    <p>sunny <span id="futureSymbol"></span></p>
+                    <p>Temperature: <span id="futureTemp"></span></p>
+                    <p>Humidity: <span id="futureHumidity"></span></p>
+                </div>
+                <div class="col-lg-2 day">
+                    <p id="futureDate">Wednesday 07/31/2020</p>
+                    <p>sunny <span id="futureSymbol"></span></p>
+                    <p>Temperature: <span id="futureTemp"></span></p>
+                    <p>Humidity: <span id="futureHumidity"></span></p>
+                </div>
+                <div class="col-lg-2 day">
+                    <p id="futureDate">Wednesday 07/31/2020</p>
+                    <p>sunny <span id="futureSymbol"></span></p>
+                    <p>Temperature: <span id="futureTemp"></span></p>
+                    <p>Humidity: <span id="futureHumidity"></span></p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 
     
     <!--javascript and Jquery-->
