--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="col-lg-6 results">
             <div class="row today" >
                 <ul>
-                 <h1 id="cityName" >Placeholder</h1>
+                 <h1 id="city" ></h1>
                  <p id="date">Tuesday 06/30/2020</p>
                  <p>sunny <span id="symbol"></span></p>
-                 <p>Temperature: <span id="temp"></span></p>
-                 <p>Humidity: <span id="humidity"></span></p>
-                 <p>Wind Speed: <span id="wind"></span></p>
+                 <p id="temp"></p>
+                 <p><span id="humidity"></span></p>
+                 <p><span id="wind"></span></p>
                  <p>UV Index: <span id="UV"></span></p>
                 </ul>
             </div>
